Fix: The odd/even row striping selectors for Bootstrap 5 row selection didn't match what Bootstrap itself uses. This meant an override was conflicting and text in even rows could be unreadable if another row was inserted into the table (e.g. RowGroup).
https://datatables.net/forums/discussion/77039

--- a/css/dataTables.bootstrap5.scss
+++ b/css/dataTables.bootstrap5.scss
@@ -42,7 +42,7 @@ table.dataTable {
 		box-shadow: none;
 	}
 
-	@include row-stripes('.table-striped', '.table-hover', 0.05);
+	@include row-stripes('.table-striped', '.table-hover', 0.05, 0.075, ':nth-of-type(2n+1)');
 }
 
 
